improvements in shacl export